--- a/70_pf/SRT/sub/tour_best.html
+++ b/70_pf/SRT/sub/tour_best.html
@@ -81,7 +81,7 @@
                             <li>
                                 <a href="#">여행상품</a>
                                 <ul class="sub">
-                                    <li><a href="#">SRT베스트 여행상품</a></li>
+                                    <li><a href="#">SRT 베스트 여행상품</a></li>
                                     <li><a href="#">지역별 여행상품</a></li>
                                     <li><a href="#">기간별 여행상품</a></li>
                                 </ul>
@@ -91,6 +91,19 @@
                 </div>
             </div>
         </header>
+        <div id="title">
+            <div class="subtitle">
+                <h2>SRT 베스트 여행상품</h2>
+            </div>
+            <div class="submenu_bar">
+                <div class="sub_inner">
+                    <a href="#" class="home"><img src="../images/sub/home.png" alt="홈">홈</a>
+                    <div class="menu"><a href="#">여행상품<img src="../images/sub/arrow-down.png" alt="화살표"></a></div>
+                    <div class="menu"><a href="#">SRT 베스트 여행상품<img src="../images/sub/arrow-down.png" alt="화살표"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="best_container">
             <div class="sidebar">
                 <div class="sidebar_contents">
@@ -233,7 +246,8 @@
                             </div>
 
                         </div>
-                        <!--                        <div class="day_container">
+                        <!--
+                        <div class="day_container">
                             <h2>출발요일</h2>
                             <div class="day_container_box">
                                 <ul class="all_btn">
@@ -298,7 +312,7 @@
                 </div>
                 <div class="best_sub_2">
                     <div class="search_left">
-                        <p>검색결과 10</p>
+                        <p>검색결과 <span class="result-count" id="resultCount">6</span></p>
                     </div>
                     <div class="search_right">
                         <ul>
@@ -310,7 +324,7 @@
                 </div>
                 <div class="best_contents">
                     <div class="best_tour_contents">
-                        <div class="best_tour_contents_box" data-page="1" data-duration="당일" data-theme="기차여행">
+                        <div class="best_tour_contents_box" data-duration="당일" data-theme="기차여행">
                             <div>
                                 <div class="contents_img"><img src="../images/sub/busan1.png" alt="부산기차여행1"></div>
                                 <div class="contents_note">
@@ -346,7 +360,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="best_tour_contents_box" data-page="1" data-duration="당일" data-theme="축제">
+                        <div class="best_tour_contents_box" data-duration="당일" data-theme="축제">
                             <div>
                                 <div class="contents_img"><img src="../images/sub/gslose.png" alt="곡성장미축제와전주한옥마을"></div>
                                 <div class="contents_note">
@@ -382,7 +396,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="best_tour_contents_box" data-page="1" data-duration="2박3일" data-theme="시티투어">
+                        <div class="best_tour_contents_box" data-duration="2박3일" data-theme="시티투어">
                             <div>
                                 <div class="contents_img"><img src="../images/sub/g_u_b.png" alt="경주울산부산여행"></div>
                                 <div class="contents_note">
@@ -418,7 +432,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="best_tour_contents_box" data-page="1" data-duration="2박3일" data-theme="관광지">
+                        <div class="best_tour_contents_box" data-duration="2박3일" data-theme="관광지">
                             <div>
                                 <div class="contents_img"><img src="../images/sub/haenam.png" alt="시인의섬보길도청산도해남"></div>
                                 <div class="contents_note">
@@ -454,7 +468,188 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="best_tour_contents_box" data-page="1" data-duration="2박3일" data-theme="산/강/바다">
+                        <div class="best_tour_contents_box" data-duration="2박3일" data-theme="산/강/바다">
+                            <div>
+                                <div class="contents_img"><img src="../images/sub/dochodo.png" alt="서해4도홍도흑산도비금도초도">
+                                </div>
+                                <div class="contents_note">
+                                    <div class="contents_flex">
+                                        <div class="contents_filter">
+                                            <div class="filter_tag duration">2박3일</div>
+                                            <div class="filter_tag theme">산/강/바다</div>
+                                        </div>
+                                        <div class="contents_info">
+                                            <h3>서해 4島 홍도·흑산도·비금·도초도</h3>
+                                            <p class="subway">부산역</p>
+                                            <div class="contents_info_1">
+                                                <img src="../images/sub/month.svg" alt="여행기간">
+                                                <span>여행기간</span>
+                                                <span>2박 3일</span>
+                                            </div>
+                                            <div class="contents_info_2">
+                                                <img src="../images/sub/people.svg" alt="출발인원">
+                                                <span>출발인원</span>
+                                                <span>최소 4인</span>
+                                            </div>
+                                            <div class="tour_logo">
+                                                <img src="../images/sub/hongtour.png" alt="홍익여행사">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="contents_pay">
+                                        <p>성인기준</p>
+                                        <p><span>319,000</span>원~</p>
+                                    </div>
+                                    <a href="https://www.ktxtour.co.kr/goods/goods_category_view.asp?goodsCode=Z|15|2018|7&SearchKeyword=%B5%B5%C3%CA%B5%B5"
+                                        target="_blank">자세히보기</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="best_tour_contents_box" data-duration="당일" data-theme="기차여행">
+                            <div>
+                                <div class="contents_img"><img src="../images/sub/busan1.png" alt="부산기차여행1"></div>
+                                <div class="contents_note">
+                                    <div class="contents_flex">
+                                        <div class="contents_filter">
+                                            <div class="filter_tag duration">당일</div>
+                                            <div class="filter_tag theme">기차여행</div>
+                                        </div>
+                                        <div class="contents_info">
+                                            <h3>[부산이야기 기차여행 2탄]당일로 즐기는 SRT 부산여행</h3>
+                                            <p class="subway">부산역</p>
+                                            <div class="contents_info_1">
+                                                <img src="../images/sub/month.svg" alt="여행기간">
+                                                <span>여행기간</span>
+                                                <span>당일</span>
+                                            </div>
+                                            <div class="contents_info_2">
+                                                <img src="../images/sub/people.svg" alt="출발인원">
+                                                <span>출발인원</span>
+                                                <span>최소 4인</span>
+                                            </div>
+                                            <div class="tour_logo">
+                                                <img src="../images/sub/tourgongbang.png" alt="여행공방여행사">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="contents_pay">
+                                        <p>성인기준</p>
+                                        <p><span>159,000</span>원~</p>
+                                    </div>
+                                    <a href="https://www.tour08.co.kr/home/goods_view/index.asp?ts=goods_day&strApart=B&strBpart=2&strCpart=2&goodsNum=1230"
+                                        target="_blank">자세히보기</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="best_tour_contents_box" data-duration="당일" data-theme="축제">
+                            <div>
+                                <div class="contents_img"><img src="../images/sub/gslose.png" alt="곡성장미축제와전주한옥마을"></div>
+                                <div class="contents_note">
+                                    <div class="contents_flex">
+                                        <div class="contents_filter">
+                                            <div class="filter_tag duration">당일</div>
+                                            <div class="filter_tag theme">축제</div>
+                                        </div>
+                                        <div class="contents_info">
+                                            <h3>곡성 장미축제·전주 한옥마을</h3>
+                                            <p class="subway">익산역</p>
+                                            <div class="contents_info_1">
+                                                <img src="../images/sub/month.svg" alt="여행기간">
+                                                <span>여행기간</span>
+                                                <span>당일</span>
+                                            </div>
+                                            <div class="contents_info_2">
+                                                <img src="../images/sub/people.svg" alt="출발인원">
+                                                <span>출발인원</span>
+                                                <span>최소 10인</span>
+                                            </div>
+                                            <div class="tour_logo">
+                                                <img src="../images/sub/hongtour.png" alt="홍익여행사">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="contents_pay">
+                                        <p>성인기준</p>
+                                        <p><span>119,000</span>원~</p>
+                                    </div>
+                                    <a href="https://www.ktxtour.co.kr/goods/goods_category_view.asp?goodsCode=1|15|2011|29&SearchKeyword=%B0%EE%BC%BA"
+                                        target="_blank">자세히보기</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="best_tour_contents_box" data-duration="2박3일" data-theme="시티투어">
+                            <div>
+                                <div class="contents_img"><img src="../images/sub/g_u_b.png" alt="경주울산부산여행"></div>
+                                <div class="contents_note">
+                                    <div class="contents_flex">
+                                        <div class="contents_filter">
+                                            <div class="filter_tag duration">2박3일</div>
+                                            <div class="filter_tag theme">시티투어</div>
+                                        </div>
+                                        <div class="contents_info">
+                                            <h3>경주·울산·부산 여행</h3>
+                                            <p class="subway">경주역</p>
+                                            <div class="contents_info_1">
+                                                <img src="../images/sub/month.svg" alt="여행기간">
+                                                <span>여행기간</span>
+                                                <span>2박 3일</span>
+                                            </div>
+                                            <div class="contents_info_2">
+                                                <img src="../images/sub/people.svg" alt="출발인원">
+                                                <span>출발인원</span>
+                                                <span>최소 8인</span>
+                                            </div>
+                                            <div class="tour_logo">
+                                                <img src="../images/sub/hongtour.png" alt="홍익여행사">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="contents_pay">
+                                        <p>성인기준</p>
+                                        <p><span>434,000</span>원~</p>
+                                    </div>
+                                    <a href="https://www.ktxtour.co.kr/goods/goods_category_view.asp?goodsCode=Z|17|2023|1&SearchKeyword=%B0%E6%C1%D6"
+                                        target="_blank">자세히보기</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="best_tour_contents_box" data-duration="2박3일" data-theme="관광지">
+                            <div>
+                                <div class="contents_img"><img src="../images/sub/haenam.png" alt="시인의섬보길도청산도해남"></div>
+                                <div class="contents_note">
+                                    <div class="contents_flex">
+                                        <div class="contents_filter">
+                                            <div class="filter_tag duration">2박3일</div>
+                                            <div class="filter_tag theme">관광지</div>
+                                        </div>
+                                        <div class="contents_info">
+                                            <h3>시인의 섬 보길도·청산도·해남</h3>
+                                            <p class="subway">광주송정역</p>
+                                            <div class="contents_info_1">
+                                                <img src="../images/sub/month.svg" alt="여행기간">
+                                                <span>여행기간</span>
+                                                <span>2박 3일</span>
+                                            </div>
+                                            <div class="contents_info_2">
+                                                <img src="../images/sub/people.svg" alt="출발인원">
+                                                <span>출발인원</span>
+                                                <span>최소 8인</span>
+                                            </div>
+                                            <div class="tour_logo">
+                                                <img src="../images/sub/hongtour.png" alt="홍익여행사">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="contents_pay">
+                                        <p>성인기준</p>
+                                        <p><span>284,000</span>원~</p>
+                                    </div>
+                                    <a href="https://www.ktxtour.co.kr/goods/goods_category_view.asp?goodsCode=1|15|2010|46&SearchKeyword=%C3%BB%BB%EA%B5%B5"
+                                        target="_blank">자세히보기</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="best_tour_contents_box" data-duration="2박3일" data-theme="산/강/바다">
                             <div>
                                 <div class="contents_img"><img src="../images/sub/dochodo.png" alt="서해4도홍도흑산도비금도초도">
                                 </div>
@@ -492,18 +687,9 @@
                             </div>
                         </div>
 
-                        <div class="best_tour_contents_box" data-page="2"></div>
-                        <div class="best_tour_contents_box" data-page="2"></div>
-                        <div class="best_tour_contents_box" data-page="2"></div>
-                        <div class="best_tour_contents_box" data-page="2"></div>
-                        <div class="best_tour_contents_box" data-page="2"></div>
 
-                        <div class="best_tour_contents_box" data-page="3"></div>
-                        <div class="best_tour_contents_box" data-page="3"></div>
-                        <div class="best_tour_contents_box" data-page="3"></div>
-                        <div class="best_tour_contents_box" data-page="3"></div>
-                        <div class="best_tour_contents_box" data-page="3"></div>
                     </div>
+                    <!-- 오른쪽 하단 페이지넘김 (데이터가 적어 사용하지않음)
                     <div class="best_btn_area">
                         <div class="best_btn_page">
                             <button type="button" id="prev_btn">◀</button>
@@ -512,7 +698,7 @@
                             <button type="button" class="page_num" data-page="3">3</button>
                             <button type="button" id="next_btn">▶</button>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="best_tabs">
                     <span class="best_btn"></span>
