--- a/70_pf/tourist2/slider.html
+++ b/70_pf/tourist2/slider.html
@@ -4,41 +4,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TOURIST2: 슬라이더</title>
-    <!-- bx슬라이더 CSS 라이브러리 -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.17/jquery.bxslider.css">
-    <!-- 제이쿼리 라이브러리 -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <!-- bx슬라이더 JS 라이브러리 -->
+    <title>슬라이더</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.17/jquery.bxslider.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.17/jquery.bxslider.min.js"></script>
     <style>
         body {
-            background: saddlebrown;
+            margin: 0;
+            background: olive;
+        }
+        #slideWrap {
+        }
+        img {
+            width: 100%;
+            object-fit: cover;
         }
     </style>
+    
+    <script>
+        $(function(){
+            $('.slide').bxSlider({
+                // 자동 슬라이드
+                auto: true,
+                stopAutoOnClick: true,
+                // 일지정지/실행 버튼
+                //autoControls: true,
+                // 중앙의 동그라미: pagination 또는 indicator
+                // pager: false,
+                // 멀티스라이드의 하나의 슬라이드 크기
+                // slideWidth: 1440
+            });
+        });
+    </script>
 </head>
 
 <body>
-    <div class="bxslider">
-        <!-- 
-            더미 이미지
-                1. https://picsum.photos/
-                2. https://placehold.co/
-        -->
-        <div><img src="https://picsum.photos/id/237/1920/600" alt="이미지1"></div>
-        <div><img src="https://picsum.photos/id/238/1920/600" alt="이미지2"></div>
-        <div><img src="https://picsum.photos/id/239/1920/600" alt="이미지3"></div>
+    <div id="slideWrap">
+        <div class="slide">
+            <div><img src="./images/335-1903x600.jpg" alt="이미지"></div>
+            <div><img src="./images/337-1903x600.jpg" alt="이미지"></div>
+            <div><img src="./images/339-1903x600.jpg" alt="이미지"></div>
+        </div>
     </div>
-
-    <script>
-        $('.bxslider').bxSlider({
-            auto: true,
-            autoControls: true,
-            stopAutoOnClick: true,
-            pager: true,
-            slideWidth: 600
-        });
-    </script>
 </body>
 
 </html>
